Make the web process break into the debugger when Ctrl-Alt-Shift is held during launch

Fixes <http://webkit.org/b/42670> Would like a way to break into the
debugger when the web process launches

Reviewed by Anders Carlsson.

* WebProcess/WebKitMain.cpp:
(WebKitMain): If the Control, Alt, and Shift keys are held down in a
Debug build, call DebugBreak() so that we will break into the
debugger.

Canonical link: https://commits.webkit.org/54615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63777 268f45cc-cd09-0410-ab3c-d52691b4dbfc